--- a/src/layout.css
+++ b/src/layout.css
@@ -2,14 +2,13 @@
     display: grid;
     grid-gap: 15px;
     background-color: #3c3c3c;
-    position: relative;
     width: 100%;
     height: 100vh;
     color: white;
 }
 
 .menu {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     grid-column-start: 1;
@@ -19,7 +18,7 @@
 }
 
 .section {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     grid-column-start: 1;
@@ -29,7 +28,7 @@
 }
 
 .side {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     grid-column-start: 3;
@@ -39,7 +38,7 @@
 }
 
 .footer {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     grid-column-start: 1;
