--- a/src/component/page_layout/layout.css
+++ b/src/component/page_layout/layout.css
@@ -7,13 +7,22 @@
     color: white;
 }
 
+.middel {
+    display: grid;
+    grid-gap: 15px;
+    justify-items: stretch;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin: 0 10px;
+}
+
 .menu {
     display: grid;
-    justify-content: center;
+    justify-items: stretch;
     align-items: center;
     grid-column-start: 1;
     grid-column-end: 4;
-    height: 4em;
+    height: 13vh;
     border: 2px solid white;
 }
 
@@ -23,7 +32,7 @@
     align-items: center;
     grid-column-start: 1;
     grid-column-end: 3;
-    height: 70vh;
+    height: 65vh;
     border: 2px solid white;
 }
 
@@ -33,7 +42,7 @@
     align-items: center;
     grid-column-start: 3;
     grid-column-end: 4;
-    height: 70vh;
+    height: 65vh;
     border: 2px solid white;
 }
 
