--- a/src/component/page_layout/menu/menu_component/player.css
+++ b/src/component/page_layout/menu/menu_component/player.css
@@ -3,7 +3,7 @@
     color: white;
     background-color: #3c3c3c;
     border: 1px solid white;
-    margin: 5px;
+    margin: 25px 5px;
     padding: 0;
 }
 
